# memcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  justfile  memcp.toml
.cargo/: config.toml
.github/workflows/: ci.yml
migrations/: 001_create_memories.sql  002_add_embeddings.sql  003_add_hnsw_index.sql  004_add_fts_index.sql  005_add_salience_table.sql  006_add_extraction_columns.sql  007_add_consolidation_table.sql
src/: config.rs  errors.rs  lib.rs  logging.rs  main.rs  server.rs
src/benchmark/: dataset.rs  evaluate.rs  ingest.rs  mod.rs  prompts.rs  report.rs  runner.rs
src/consolidation/: mod.rs  similarity.rs
src/embedding/: local.rs  mod.rs  openai.rs  pipeline.rs
src/extraction/: mod.rs  ollama.rs  openai.rs  pipeline.rs
src/query_intelligence/: mod.rs  ollama.rs  openai.rs  temporal.rs
src/search/: mod.rs  salience.rs
src/store/: mod.rs  postgres.rs  sqlite.rs
tests/: integration_test.rs
